--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,118 @@
-altair==5.3.0
+altair==5.2.0
+appdirs==1.4.4
+asttokens==2.4.1
 attrs==23.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
 blinker==1.7.0
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+comm==0.2.1
+contourpy==1.2.0
+cycler==0.12.1
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==2.0.1
+Faker==24.11.0
+fastjsonschema==2.19.1
+favicon==0.7.0
+fonttools==4.48.1
 gitdb==4.0.11
 GitPython==3.1.43
+htbuilder==0.6.2
 idna==3.7
+importlib_metadata==7.1.0
+ipykernel==6.29.2
+ipython==8.21.0
+jedi==0.19.1
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.5
+lxml==5.2.1
+Markdown==3.6
 markdown-it-py==3.0.0
+markdownlit==0.0.7
 MarkupSafe==2.1.5
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
 mdurl==0.1.2
+mistune==3.0.2
+more-itertools==10.2.0
+nbclient==0.10.0
+nbconvert==7.16.2
+nbformat==5.10.3
+nest-asyncio==1.6.0
+notebook-as-pdf==0.5.0
 numpy==1.26.4
-packaging==24.0
-pandas==2.2.2
-pillow==10.3.0
+openpyxl==3.1.2
+packaging==23.2
+pandas==2.2.0
+pandocfilters==1.5.1
+parso==0.8.3
+pillow==10.2.0
+platformdirs==4.2.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
 protobuf==4.25.3
-pyarrow==16.0.0
+psutil==5.9.8
+pure-eval==0.2.2
+pyarrow==15.0.0
 pydeck==0.8.1b0
+pyee==11.1.0
 Pygments==2.17.2
-python-dateutil==2.9.0.post0
+pymdown-extensions==10.8
+pyparsing==3.1.1
+PyPDF2==3.0.1
+pyppeteer==2.0.0
+python-dateutil==2.8.2
 pytz==2024.1
-referencing==0.34.0
+pywin32==306
+PyYAML==6.0.1
+pyzmq==25.1.2
+referencing==0.33.0
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
+scipy==1.13.0
+seaborn==0.13.2
 six==1.16.0
 smmap==5.0.1
+soupsieve==2.5
+st-annotated-text==4.0.1
+stack-data==0.6.3
 streamlit==1.33.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.0
+streamlit-embedcode==0.1.2
+streamlit-extras==0.4.2
+streamlit-faker==0.0.3
+streamlit-image-coordinates==0.1.6
+streamlit-keyup==0.2.4
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
 tenacity==8.2.3
+tinycss2==1.2.1
 toml==0.10.2
 toolz==0.12.1
 tornado==6.4
-typing_extensions==4.11.0
-tzdata==2024.1
-urllib3==2.2.1
+tqdm==4.66.2
+traitlets==5.14.1
+typing_extensions==4.10.0
+tzdata==2023.4
+urllib3==1.26.18
+validators==0.28.1
 watchdog==4.0.0
+wcwidth==0.2.13
+webencodings==0.5.1
+websockets==10.4
+zipp==3.18.1
